--- a/Project_structure.mdx
+++ b/Project_structure.mdx
@@ -1,28 +1,43 @@
+# Updated Project Structure
+
 pilotnet-fe (frontend)
 |-- app
 |   |-- globals.css
 |   |-- layout.tsx
 |   |-- page.tsx
+|   |-- design
+|   |   `-- page.tsx
+|   |-- data
+|   |   `-- page.tsx
+|   |-- about
+|   |   |-- page.tsx
+|   |   `-- about-us.md
+|-- public
+|-- package.json
+|-- tsconfig.json
+|-- tailwind.config.js
+
 Pilotnet (backend)
-|--api/
-|   ├── main.py
-|   ├── routers/
-|   │   ├── train.py
-|   │   ├── demo.py
-|   │   └── data.py
-|   ├── models/
-|   │   └── config.py
-|   └── utils/
-|       ├── file_operations.py
-|       └── model_operations.py
-|-- data/
-|
-|-- configs/
-|
-|-- pilotnet/
-    ├── dataloader/
-    ├── models/
-    ├── utils/
-    ├── __init__.py
-    ├── evaluate.py
-    ├── train.py
+|-- api
+|   |-- main.py
+|   |-- routers
+|   |   |-- design.py
+|   |   `-- data.py
+|   |-- models
+|   |   `-- config.py
+|   `-- utils
+|       |-- file_operations.py
+|       `-- model_operations.py
+|-- data
+|-- configs
+|-- pilotnet
+|   |-- dataloader
+|   |   `-- data_loader.py
+|   |-- models
+|   |   `-- pilotnet.py
+|   |-- utils
+|   |   `-- utils.py
+|   |-- __init__.py
+|   |-- evaluate.py
+|   `-- train.py
+|-- requirements.txt
